syntax = "proto3";

package greedy_eye.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

option go_package = "github.com/foxcool/greedy-eye/internal/api/v1;apiv1";

// =============================================================================
// TYPES
// =============================================================================

enum RuleStatus {
  RULE_STATUS_UNKNOWN = 0;
  RULE_STATUS_ACTIVE = 1;
  RULE_STATUS_PAUSED = 2;
  RULE_STATUS_DISABLED = 3;
  RULE_STATUS_ERROR = 4;
}

enum ExecutionStatus {
  EXECUTION_STATUS_UNKNOWN = 0;
  EXECUTION_STATUS_PENDING = 1;
  EXECUTION_STATUS_IN_PROGRESS = 2;
  EXECUTION_STATUS_COMPLETED = 3;
  EXECUTION_STATUS_FAILED = 4;
  EXECUTION_STATUS_CANCELLED = 5;
}

// Rule defines a business rule that can be applied to portfolios.
message Rule {
  string id = 1;
  string name = 2;
  string description = 3;
  string rule_type = 4; // e.g., "target_allocation", "monthly_withdrawal", "stop_loss", "dca"
  string portfolio_id = 5;
  string user_id = 6;
  RuleStatus status = 7;
  google.protobuf.Struct configuration = 8;
  RuleSchedule schedule = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// RuleSchedule defines when a rule should be executed.
message RuleSchedule {
  string cron_expression = 1;
  string timezone = 2;
  bool one_time = 3;
  google.protobuf.Timestamp execute_after = 4;
}

// RuleExecution represents a single execution of a rule.
message RuleExecution {
  string id = 1;
  string rule_id = 2;
  optional string portfolio_id = 3;
  optional string user_id = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp completed_at = 6;
  ExecutionStatus status = 7;
  optional string error_message = 8;
  repeated string created_transaction_ids = 9;
  repeated string affected_holding_ids = 10;
  int32 transactions_created = 11;
  google.protobuf.Struct execution_summary = 12;
}

// =============================================================================
// SERVICE
// =============================================================================

// AutomationService manages rules and their executions.
service AutomationService {
  // --- Rule CRUD ---
  rpc CreateRule(CreateRuleRequest) returns (Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules"
      body: "rule"
    };
  }

  rpc GetRule(GetRuleRequest) returns (Rule) {
    option (google.api.http) = {
      get: "/api/v1/rules/{id}"
    };
  }

  rpc UpdateRule(UpdateRuleRequest) returns (Rule) {
    option (google.api.http) = {
      put: "/api/v1/rules/{rule.id}"
      body: "rule"
    };
  }

  rpc DeleteRule(DeleteRuleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/rules/{id}"
    };
  }

  rpc ListRules(ListRulesRequest) returns (ListRulesResponse) {
    option (google.api.http) = {
      get: "/api/v1/rules"
    };
  }

  // --- Rule execution ---
  rpc ExecuteRule(ExecuteRuleRequest) returns (ExecuteRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/execute"
      body: "*"
    };
  }

  rpc ExecuteRuleAsync(ExecuteRuleAsyncRequest) returns (ExecuteRuleAsyncResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/execute-async"
      body: "*"
    };
  }

  rpc CancelRuleExecution(CancelRuleExecutionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/rule-executions/{execution_id}/cancel"
      body: "*"
    };
  }

  // --- Rule validation and simulation ---
  rpc ValidateRule(ValidateRuleRequest) returns (ValidateRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/validate"
      body: "rule"
    };
  }

  rpc SimulateRule(SimulateRuleRequest) returns (SimulateRuleResponse) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/simulate"
      body: "*"
    };
  }

  // --- Rule status management ---
  rpc EnableRule(EnableRuleRequest) returns (Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/enable"
      body: "*"
    };
  }

  rpc DisableRule(DisableRuleRequest) returns (Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/disable"
      body: "*"
    };
  }

  rpc PauseRule(PauseRuleRequest) returns (Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/pause"
      body: "*"
    };
  }

  rpc ResumeRule(ResumeRuleRequest) returns (Rule) {
    option (google.api.http) = {
      post: "/api/v1/rules/{rule_id}/resume"
      body: "*"
    };
  }

  // --- RuleExecution CRUD ---
  rpc CreateRuleExecution(CreateRuleExecutionRequest) returns (RuleExecution) {
    option (google.api.http) = {
      post: "/api/v1/rule-executions"
      body: "rule_execution"
    };
  }

  rpc GetRuleExecution(GetRuleExecutionRequest) returns (RuleExecution) {
    option (google.api.http) = {
      get: "/api/v1/rule-executions/{id}"
    };
  }

  rpc UpdateRuleExecution(UpdateRuleExecutionRequest) returns (RuleExecution) {
    option (google.api.http) = {
      put: "/api/v1/rule-executions/{rule_execution.id}"
      body: "rule_execution"
    };
  }

  rpc ListRuleExecutions(ListRuleExecutionsRequest) returns (ListRuleExecutionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/rule-executions"
    };
  }
}

// =============================================================================
// RULE MESSAGES
// =============================================================================

message CreateRuleRequest {
  Rule rule = 1;
}

message GetRuleRequest {
  string id = 1;
}

message UpdateRuleRequest {
  Rule rule = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteRuleRequest {
  string id = 1;
}

message ListRulesRequest {
  optional string user_id = 1;
  optional string portfolio_id = 2;
  optional string rule_type = 3;
  optional RuleStatus status = 4;
  optional int32 page_size = 5;
  optional string page_token = 6;
}

message ListRulesResponse {
  repeated Rule rules = 1;
  string next_page_token = 2;
}

// =============================================================================
// RULE EXECUTION MESSAGES
// =============================================================================

message ExecuteRuleRequest {
  string rule_id = 1;
  bool dry_run = 2;
  optional string execution_context = 3;
}

message ExecuteRuleResponse {
  RuleExecution execution = 1;
}

message ExecuteRuleAsyncRequest {
  string rule_id = 1;
  bool dry_run = 2;
  optional string execution_context = 3;
}

message ExecuteRuleAsyncResponse {
  string execution_id = 1;
  string status = 2;
}

message CancelRuleExecutionRequest {
  string execution_id = 1;
  string reason = 2;
}

// =============================================================================
// RULE VALIDATION AND SIMULATION MESSAGES
// =============================================================================

message ValidateRuleRequest {
  Rule rule = 1;
}

message ValidateRuleResponse {
  bool valid = 1;
  repeated string validation_errors = 2;
  repeated string warnings = 3;
}

message SimulateRuleRequest {
  string rule_id = 1;
  optional google.protobuf.Timestamp simulate_at = 2;
  bool include_costs = 3;
}

message SimulateRuleResponse {
  bool success = 1;
  SimulationResult result = 2;
  repeated string warnings = 3;
  string error_message = 4;
}

message SimulationResult {
  double estimated_cost = 1;
  int32 estimated_steps = 2;
  int64 estimated_duration_ms = 3;

  oneof rule_result {
    RebalancingSimulation rebalancing = 4;
    WithdrawalSimulation withdrawal = 5;
    StopLossSimulation stop_loss = 6;
    DCASimulation dca = 7;
  }
}

message RebalancingSimulation {
  double current_total_value = 1;
  repeated AssetAllocation current_allocations = 2;
  repeated AssetAllocation target_allocations = 3;
  repeated PlannedTrade planned_trades = 4;
  double total_estimated_fees = 5;
}

message AssetAllocation {
  string asset_id = 1;
  double current_amount = 2;
  double current_percentage = 3;
  double target_percentage = 4;
  double difference = 5;
}

message PlannedTrade {
  string asset_id = 1;
  string action = 2; // "buy" or "sell"
  double amount = 3;
  double estimated_price = 4;
  double estimated_fee = 5;
}

message WithdrawalSimulation {
  double available_balance = 1;
  double requested_amount = 2;
  bool sufficient_funds = 3;
  repeated AssetWithdrawalPlan withdrawal_plan = 4;
}

message AssetWithdrawalPlan {
  string asset_id = 1;
  double amount_to_withdraw = 2;
  double estimated_value = 3;
  bool needs_selling = 4;
}

message StopLossSimulation {
  double current_portfolio_value = 1;
  double stop_loss_threshold = 2;
  double current_loss_percentage = 3;
  bool would_trigger = 4;
  repeated AssetStopLoss asset_actions = 5;
}

message AssetStopLoss {
  string asset_id = 1;
  double current_amount = 2;
  double amount_to_sell = 3;
  double estimated_value = 4;
}

message DCASimulation {
  double available_balance = 1;
  double dca_amount = 2;
  string target_asset_id = 3;
  double estimated_purchase_amount = 4;
  double estimated_price = 5;
  double estimated_fee = 6;
  bool sufficient_funds = 7;
}

// =============================================================================
// RULE STATUS MANAGEMENT MESSAGES
// =============================================================================

message EnableRuleRequest {
  string rule_id = 1;
}

message DisableRuleRequest {
  string rule_id = 1;
}

message PauseRuleRequest {
  string rule_id = 1;
  string reason = 2;
}

message ResumeRuleRequest {
  string rule_id = 1;
}

// =============================================================================
// RULE EXECUTION CRUD MESSAGES
// =============================================================================

message CreateRuleExecutionRequest {
  RuleExecution rule_execution = 1;
}

message GetRuleExecutionRequest {
  string id = 1;
}

message UpdateRuleExecutionRequest {
  RuleExecution rule_execution = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message ListRuleExecutionsRequest {
  optional string rule_id = 1;
  optional string portfolio_id = 2;
  optional string user_id = 3;
  optional ExecutionStatus status = 4;
  optional google.protobuf.Timestamp from = 5;
  optional google.protobuf.Timestamp to = 6;
  optional int32 page_size = 7;
  optional string page_token = 8;
}

message ListRuleExecutionsResponse {
  repeated RuleExecution rule_executions = 1;
  string next_page_token = 2;
}
